# web_hw_10

./: pyproject.toml
hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_project/quotes/: admin.py  forms.py  models.py  urls.py  views.py
hw_project/quotes/migrations/: 0001_initial.py  0002_rename_quotes_quote.py  0003_rename_authors_author.py  0004_alter_tag_name.py  0005_userauthor_userquote.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/: about.html  author_detail.html  base.html  index.html  quotes_by_tag.html
hw_project/quotes/templates/quotes/: add_user_author.html  add_user_quote.html  author_detail.html  base.html  index.html  quotes_by_tag.html  user_contributions.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: views.py
hw_project/users/templates/users/: login.html  signup.html
hw_project/utils/: migration.py  utils.py
